--- a/to-do.html
+++ b/to-do.html
@@ -29,12 +29,20 @@
             </div>
           </div>
 
+          <span class="btn btn-primary" id="add-task">Another Task</span>
           <button type="submit" class=" btn btn-default btn-sm">Add List</button>
 
         </form>
 
         <ul id="lists">
         </ul>
+
+        <div id="show-list">
+          <h2></h2>
+          <!-- <span class="list-title"></span> -->
+          <ul id="tasks">
+          </ul>
+        </div>
 
     </div>
   </body>
